<resources>
    <string name="app_name">打地鼠</string>
    <string name="doubleMoudle">双人模式</string>
    <string name="startGame">开始游戏</string>
    <string name="highScore">排行榜</string>
    <string name="exit">退出</string>
    <string name="about">关于</string>

    <string name="title_activity_double">DoubleActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="progress_connecting">正在连接</string>
    <string name="progress_scaning">正在扫描</string>
</resources>
